tests/reference/asr-merge_01-0179fc0.stderr
semantic error: Unequal character lengths (11/7) in MERGE intrinsic
 --> tests/errors/merge_01.f90:5:12
  |
5 |   print *, merge("fail caught", "no fail", ios /= 0)
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
